--- a/assets/scss/_fujioka.scss
+++ b/assets/scss/_fujioka.scss
@@ -271,27 +271,30 @@
 
   .container-livers{
     // width: 1050px;
-    height: 1000px;
+    // height: 1000px;
 
     background-color: gray;
 
    .box-livers1{
      display: flex;
      justify-content: space-around;
+     padding-top: 97px;
      padding-left: 10.6%;
      padding-right: 10.8%;
    } 
 
    .box-livers2{
+     margin-top: 21.93px;
      display: flex;
      justify-content: space-around;
      padding-left: 10.6%;
      padding-right: 10.8%;
+     padding-bottom: 94.2px;
    } 
 
    .livers{
-    width : 19%;
-    height :28.4%;
+    width : 24.1%;
+    // height :28.4%;
     border: solid pink 1px;
    }
   }
