--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -263,7 +263,48 @@ p {
   box-shadow: 15px 15px 0px 0 #9067E9;
 }
 
+// contact
+form textarea {
+  border-radius: 5px;
+  margin: 20px auto;
+  border: solid 2px rgb(12, 12, 12);
+  margin: 20px auto;
+  display: block;
+  width: 550px;
+  height: 400px;
+}
 
+
+.box1 {
+  font-size: 20px;
+  color: rgb(46, 45, 45);
+  width: 400px;
+  height: 40px;
+  border-radius: 3px;
+  border: solid 2px rgb(12, 12, 12);
+  margin: 20px auto;
+  padding-left: 10px;
+}
+
+.box2 {
+  width: 400px;
+  height: 340px;
+  border-radius: 3px;
+  border: solid 2px rgba(40, 38, 38, 0.562);
+  margin: 20px auto;
+
+}
+
+button {
+  font-size: 25px;
+  color: white;
+  width: 200px;
+  height: 60px;
+  background-color: black;
+  margin-top: 10px;
+  margin-left: 580px;
+  text-align: center;
+}
 
 
 
@@ -284,8 +325,6 @@ p {
   }
 
 }
-
-
 
 
 
