--- a/assets/scss/_fujioka.scss
+++ b/assets/scss/_fujioka.scss
@@ -309,12 +309,24 @@
 
   h1{
     font-size: 80px;
-    text-align: center;
   }
 
+.sponser1{
+  margin: 0 auto;
+
   #animal-rights{
-    justify-items: center;
+    width: 94%;
+    margin: 0 auto;
+}
   }
+
+.sponser2{
+  margin: 0 auto;
+
+ #animal-foundation{
+   width: 38.7%;
+ }
+}
 
 
   h5{
