borderコメントアウトしました！！！

--- a/assets/scss/_fujioka.scss
+++ b/assets/scss/_fujioka.scss
@@ -256,9 +256,9 @@
 
 
 // ----自分で作成
-*{
-  border: solid gold 1px;
-}
+// *{
+//   border: solid gold 1px;
+// }
 
 .pet-livers{
   // max-width: 1170px;
