アニメーションおそらくオッケー

--- a/assets/scss/_fujioka.scss
+++ b/assets/scss/_fujioka.scss
@@ -260,6 +260,21 @@
 //   border: solid gold 1px;
 // }
 
+// アニメーション
+section{
+	opacity : 0;
+	visibility: hidden;
+	transition: 1s;
+	transform: translateY(30px);
+}
+
+/*アニメーション要素までスクロールした時のスタイル*/
+.active{
+	opacity: 1;
+	visibility: visible;
+	transform: translateY(0);
+}
+
 .pet-livers{
   // max-width: 1170px;
    margin: 0 auto; 
