--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-header {
+nav {
   display: flex;
   justify-content: flex-end;
 }
@@ -6,21 +6,30 @@ header {
 .header-right ul {
   display: flex;
   justify-content: end;
-  margin-top: -90px;
 }
-
 .header-right li {
-  margin-left: 43px;
-  padding: 0;
+  margin: 5px 20px 0 0;
+  letter-spacing: 1px;
+  padding: 8px;
   font-size: 28px;
 }
-
 .header-right a {
   text-decoration: none;
   color: black;
 }
 
-.box-img {
+.kv-pc {
+  width: 100%;
+  height: auto;
+  background-size: cover;
+}
+
+.container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.kv-img1 {
   position: absolute;
   width: 460px;
   height: 220px;
@@ -28,20 +37,18 @@ header {
   left: 40px;
   bottom: 10px;
   background-image: url(../../img/kv_03_pc.jpg);
-  background-size: cover;
 }
 
-.box-img1 {
+.kv-img2 {
   position: absolute;
   width: 460px;
   height: 638px;
   left: 40px;
   top: 326px;
   background-image: url(../../img/kv_02_pc.jpg);
-  background-size: cover;
 }
 
-.box-img2 {
+.kv-img3 {
   position: absolute;
   width: 420px;
   height: 638px;
@@ -49,10 +56,9 @@ header {
   top: 95px;
   background-image: url(../../img/kv_01_pc.jpg);
   background-repeat: no-repeat;
-  background-size: contain;
 }
 
-.box-img3 {
+.kv-img4 {
   position: absolute;
   width: 420px;
   height: 224px;
@@ -67,95 +73,52 @@ header {
   font-size: 58px;
   font-weight: bold;
   color: black;
-  position: absolute;
-  top: 420px;
-  left: 570px;
+  text-align: center;
 }
 
 .title-wrap {
   position: relative;
   display: flex;
+  justify-content: center;
   flex-direction: column;
-  align-items: center;
   height: 100vh;
 }
-.title-wrap p {
-  font-size: 30px;
-  position: absolute;
-  top: 80px;
-  left: 570px;
-}
 
-.title-wrap2 {
-  position: relative;
+.text-container {
+  font-size: 50px;
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100vh;
 }
-.title-wrap2 p {
-  font-size: 30px;
-  position: absolute;
-  top: 100px;
-  left: 570px;
-}
 
-.title-wrap3 {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
-}
-.title-wrap3 p {
+.text-container1 {
   font-size: 25px;
-  position: absolute;
-  top: 50px;
-  left: px;
-}
-
-.container-wrap {
-  max-width: 1170px;
-  margin: 100px auto 0;
-}
-
-#About {
-  font-size: 40px;
-  color: blackr;
   text-align: center;
 }
 
-h2 {
-  font-size: 42px;
-}
-
-.container {
+.container-wrap {
   display: flex;
-  align-items: center;
-  text-align: start;
-  margin-top: 20px;
+  max-width: 1170px;
+  text-align: center;
+  letter-spacing: 1px;
 }
 
 #About .container {
+  display: flex;
+  align-items: center;
   flex-direction: row-reverse;
+  margin-top: 80px;
 }
 
-.description {
-  margin-left: 20px;
+.about-description {
+  margin-left: 10px;
 }
 
 #About .description {
   margin-left: auto;
   margin-right: 100px;
-}
-
-.mulch-deco {
-  width: 100%;
-  height: auto;
-  background-image: url(../../img/deco_01.png), url(../../img/deco_02.png), url(../../img/deco_03.png), url(../../img/deco_04.png), url(../../img/deco_05.png), url(../../img/deco_06.png), url(../../img/deco_07.png), url(../../img/deco_08.png), url(../../img/deco_09.png), url(../../img/deco_10.png);
-  background-repeat: no-repeat, no-repeat;
-  background-size: 20%, 5%;
-  background-position: bottom right, top left;
 }
 
 .card-skin {
@@ -168,15 +131,14 @@ h2 {
   box-shadow: -15px 15px 0 #FFF835;
 }
 
-.container {
+.container2 {
   padding: 100px 0px 0px;
   margin: 0px 70px;
   text-align: center;
 }
 
-.container-wrap {
+.container-wrap2 {
   max-width: 1170px;
-  display: block;
   padding: 50px 0px;
   margin-left: 50px;
   margin-top: 40px;
@@ -224,44 +186,67 @@ p {
   box-shadow: 15px 15px 0px 0 #9067E9;
 }
 
-form textarea {
-  border-radius: 5px;
-  margin: 20px auto;
-  border: solid 2px rgb(12, 12, 12);
-  margin: 20px auto;
+input, textarea {
   display: block;
-  width: 550px;
-  height: 400px;
-}
-
-.box1 {
-  font-size: 20px;
-  color: rgb(46, 45, 45);
   width: 400px;
-  height: 40px;
-  border-radius: 3px;
-  border: solid 2px rgb(12, 12, 12);
-  margin: 20px auto;
-  padding-left: 10px;
+  padding: 8px;
+  border: 1px solid black;
+  margin-top: 8px;
+  margin-bottom: 8px;
 }
 
-.box2 {
-  width: 400px;
-  height: 340px;
-  border-radius: 3px;
-  border: solid 2px rgba(40, 38, 38, 0.562);
-  margin: 20px auto;
-}
-
-button {
-  font-size: 25px;
-  color: white;
-  width: 200px;
-  height: 60px;
+.form-btn {
   background-color: black;
-  margin-top: 10px;
-  margin-left: 580px;
+  color: white;
+  width: 400px;
+  padding: 20px 20px;
+  border: 1px;
+  margin-left: 58px;
+  margin-bottom: 100px;
+  cursor: pointer;
   text-align: center;
+  font-size: 20px;
+}
+
+.contact-wrap {
+  padding: 100px;
+}
+.contact-wrap .container {
+  display: block;
+}
+
+.wrap {
+  display: flex;
+  text-align: center;
+  color: #fff;
+  font-weight: bold;
+}
+
+.wrap .box-a {
+  flex-grow: 1;
+  position: relative;
+  height: 140px;
+  line-height: 140px;
+  margin-right: 2em;
+  background-color: #aeb2ba;
+}
+
+.wrap .box-a::after {
+  position: absolute;
+  top: 0;
+  left: 100%;
+  margin: 0 1rem;
+  content: "";
+  width: 1px;
+  height: 100%;
+  background-color: #333;
+}
+
+.wrap .box-b {
+  flex-grow: 1;
+  height: 140px;
+  line-height: 140px;
+  background-color: #495464;
 }
 
 @media screen and (max-width: 767px) {
@@ -272,27 +257,28 @@ button {
     width: 100%;
   }
 }
-<<<<<<< HEAD
-=======
+.form-btn {
+  margin-top: 24px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  width: 160px;
+  font-size: 16px;
+}
 
 * {
   border: solid gold 1px;
 }
 
->>>>>>> 54ff10b5174ff316f5a3f0c2de0c11f1a5f25e3a
 .pet-livers {
   margin: 0 auto;
 }
-
 .pet-livers h1 {
   font-size: 80px;
   text-align: center;
 }
-
 .pet-livers .container-livers {
   background-color: gray;
 }
-
 .pet-livers .container-livers .box-livers1 {
   display: flex;
   justify-content: space-around;
@@ -300,7 +286,6 @@ button {
   padding-left: 10.6%;
   padding-right: 10.8%;
 }
-
 .pet-livers .container-livers .box-livers2 {
   margin-top: 21.93px;
   display: flex;
@@ -309,7 +294,6 @@ button {
   padding-right: 10.8%;
   padding-bottom: 94.2px;
 }
-
 .pet-livers .container-livers .livers {
   width: 24.1%;
   border: solid pink 1px;
@@ -322,17 +306,10 @@ button {
   font-size: 80px;
   text-align: center;
 }
-
 .sponser #animal-rights {
   justify-items: center;
 }
-
 .sponser h5 {
   font-size: 40px;
   text-align: center;
-<<<<<<< HEAD
 }/*# sourceMappingURL=style.css.map */
-=======
-}
-/*# sourceMappingURL=style.css.map */
->>>>>>> 54ff10b5174ff316f5a3f0c2de0c11f1a5f25e3a
