--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,5 @@
-// ----- header-right nav -----
-header {
+// ----- nav -----
+nav {
   display: flex;
   justify-content: flex-end;
 }
@@ -8,14 +8,14 @@ header {
   ul {
     display: flex;
     justify-content: end;
-    margin-top: -90px;
-
   }
 
   li {
-    margin-left: 43px;
-    padding: 0;
+    margin: 5px 20px 0 0;
+    letter-spacing: 1px;
+    padding: 8px;
     font-size: 28px;
+
   }
 
   a {
@@ -26,55 +26,76 @@ header {
   }
 }
 
-
 // ----- kv -----
-// .top-kv {
-//   background-image: url(../../img/kv_pc.png);
-//   background-position:center center;  
-//   background-size: 100%;
-//   width:auto;
-//   height: 865px;
 
+// .kv {
+//   background-image: url('./img/hill.jpg');
+//   background-position: center;
+//   background-size: cover;
+//   height: 100vh;
+//   position: relative;
 // }
 
-.box-img {
-  position: absolute;
-  width: 460px;
-  height: 220px;
+.kv-pc{
+  // background-image: url('../../img/kv_pc.png');
+  // background-position: center;
+  // background-size: cover;
+  // height: 100vh;
+  // // position: relative;
+  // 要素の配置方法を指定
+  position: absolute;     
+  // 余白指定  
+  padding: 20px;
+  // 左からの位置指定
+  left: 100px;
+  //上からの位置指定
+  top:80px;    
+  width: 1170px;
+  // height: auto;
+  //  background-size:contain;
+  
+}
+
+.container{
+  display: flex;
+  justify-content: space-around;
+}
+
+.kv-img1 {
+  
   top: 95px;
   left: 40px;
   bottom: 10px;
   background-image: url(../../img/kv_03_pc.jpg);
-  background-size: cover;
+  background-size:contain;
+ 
 
 }
 
-.box-img1 {
-  position: absolute;
+.kv-img2 {
+ 
   width: 460px;
   height: 638px;
   left: 40px;
   top: 326px;
   background-image: url(../../img/kv_02_pc.jpg);
-  background-size: cover;
-
+  
 }
 
-.box-img2 {
-  position: absolute;
+.kv-img3 {
+  
   width: 420px;
   height: 638px;
   right: 40px;
   top: 95px;
   background-image: url(../../img/kv_01_pc.jpg);
   background-repeat: no-repeat;
-  background-size: contain;
+  
 
 }
 
-
-.box-img3 {
-  position: absolute;
+.kv-img4 {
+  
   width: 420px;
   height: 224px;
   right: 40px;
@@ -84,111 +105,125 @@ header {
   background-size: contain;
 }
 
+.textarea{
+
+}
+
 .main-title {
   font-size: 58px;
   font-weight: bold;
   color: black;
-  position: absolute;
-  top: 420px;
-  left: 570px;
+  text-align: center;
+
+  // top: 420px;
+  // left: 570px;
 }
 
 
 .title-wrap {
-  position: relative;
+  
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+
+
+.text-container {
+  font-size: 50px;
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  p {
-    font-size: 30px;
-    position: absolute;
-    top: 80px;
-    left: 570px;
-  }
 }
 
 
-.title-wrap2 {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
-  p {
-    font-size: 30px;
-    position: absolute;
-    top: 100px;
-    left: 570px;
-  }
+.text-container1{
+  font-size: 25px;
+  text-align: center;
+  // position: relative;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // height: 100vh;
+  // p {
+  // font-size: 25px;
+  // position: absolute;
+  // top: 50px;
+  // left: px;
+  // }
 }
 
-
-.title-wrap3 {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
-  p {
-    font-size: 25px;
-    position: absolute;
-    top: 50px;
-    left: px;
-  }
-}
 
 
 // ----- About -----
-.container-wrap {
+
+
+.about-right {
+  display: block;
   max-width: 1170px;
-  margin: 100px auto 0;
+ 
 }
 
-#About {
-  font-size: 40px;
-  color: blackr;
+.about{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 80px;
+
+h1{
   text-align: center;
+  font-size: 48px;
+    }
+    
 }
 
-h2{
-  font-size: 42px;
-}
-.container {
+
+
+
+
+
+.about {
   display: flex;
   align-items: center;
-  text-align: start;
-  margin-top: 20px;
-  
-}
-
-#About .container {
   flex-direction: row-reverse;
+  margin-top: 80px;
 }
+.about-left {
+ 
+  display: flex;
+  align-items: center;
+  
 
-.description {
-  margin-left: 20px;
-}
+  .about-description {
+    margin-left: 10px;
+  }
+  
 
-#About .description {
+
+
+.about.description {
   margin-left: auto;
   margin-right: 100px;
 }
 
-// ----- About mulch-deco -----
-.mulch-deco {
-  width: 100%;
-  height: auto;
-  background-image: url(../../img/deco_01.png), url(../../img/deco_02.png), url(../../img/deco_03.png), url(../../img/deco_04.png), url(../../img/deco_05.png), url(../../img/deco_06.png), url(../../img/deco_07.png), url(../../img/deco_08.png), url(../../img/deco_09.png), url(../../img/deco_10.png);
-  background-repeat: no-repeat, no-repeat;
-  background-size: 20%, 5%;
-  background-position: bottom right, top left;
-}
+// // ----- About mulch-deco -----
+// positionアブソリュート
+// .mulch-deco {
+//   width: 100%;
+//   height: auto;
+//   background-image: url(../../img/deco_01.png), url(../../img/deco_02.png), url(../../img/deco_03.png), url(../../img/deco_04.png), url(../../img/deco_05.png), url(../../img/deco_06.png), url(../../img/deco_07.png), url(../../img/deco_08.png), url(../../img/deco_09.png), url(../../img/deco_10.png);
+//   background-repeat: no-repeat, no-repeat;
+//   background-size: 20%, 5%;
+//   background-position: bottom right, top left;
+// }
 
-// ----- box-shadow -----
-.card-skin {
+// ----- card-skin -----
+.picture {
   position: relative;
   box-shadow: 15px 15px 0 #F9C83B;
+  
 }
 
 .card-skin2 {
@@ -196,18 +231,18 @@ h2{
   box-shadow: -15px 15px 0 #FFF835;
 }
 
+
+
 // ------- Service -------
 
-.container {
+.container2 {
   padding: 100px 0px 0px;
   margin: 0px 70px;
   text-align: center;
 }
 
-.container-wrap {
-
+.servise {
   max-width: 1170px;
-  display: block;
   padding: 50px 0px;
   margin-left: 50px;
   margin-top: 40px;
@@ -263,48 +298,82 @@ p {
   box-shadow: 15px 15px 0px 0 #9067E9;
 }
 
+
 // contact
-form textarea {
-  border-radius: 5px;
-  margin: 20px auto;
-  border: solid 2px rgb(12, 12, 12);
-  margin: 20px auto;
+
+input,textarea {
   display: block;
-  width: 550px;
-  height: 400px;
+  width: 400px; 
+  padding: 8px; 
+  border: 1px solid black; 
+  margin-top: 8px; 
+  margin-bottom: 8px;
+
+ 
 }
 
-
-.box1 {
-  font-size: 20px;
-  color: rgb(46, 45, 45);
-  width: 400px;
-  height: 40px;
-  border-radius: 3px;
-  border: solid 2px rgb(12, 12, 12);
-  margin: 20px auto;
-  padding-left: 10px;
-}
-
-.box2 {
-  width: 400px;
-  height: 340px;
-  border-radius: 3px;
-  border: solid 2px rgba(40, 38, 38, 0.562);
-  margin: 20px auto;
-
-}
-
-button {
-  font-size: 25px;
-  color: white;
-  width: 200px;
-  height: 60px;
+.form-btn {
   background-color: black;
-  margin-top: 10px;
-  margin-left: 580px;
+  color: white;
+  width: 400px;
+  padding: 20px 20px;
+  border: 1px;
+  margin-left: 58px;
+  margin-bottom: 100px;
+  cursor: pointer;
   text-align: center;
+  font-size: 20px;
+  
+ 
 }
+
+.contact {
+  padding: 100px;
+
+  .container{
+    display: block;
+  }
+}
+
+
+// 真ん中ボーダー見本
+
+.wrap {
+	display: flex;
+	text-align: center;
+	color: #fff;
+	font-weight: bold;
+}
+
+.wrap .box-a {
+	flex-grow: 1;
+	position: relative;
+	height: 140px;
+	line-height: 140px;
+	margin-right: 2em;
+	background-color: #aeb2ba;
+}
+
+.wrap .box-a::after {
+	position: absolute;
+	top: 0;
+	left: 100%;
+	margin: 0 1rem;
+	content: "";
+	width: 1px;
+	height: 100%;
+	background-color: rgb(0, 0, 0);
+}
+
+.wrap .box-b {
+	flex-grow: 1;
+	height: 140px;
+	line-height: 140px;
+	background-color: #030303;
+}
+
+
+
 
 
 
@@ -327,8 +396,14 @@ button {
 }
 
 
-
-
+// -------form--------
+.form-btn {
+  margin-top: 24px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  width: 160px;
+  font-size: 16px;
+}
 
 
 
