一旦コミットします

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -374,16 +374,6 @@ input,textarea {
 
 
 
-
-
-
-
-
-
-
-
-
-
 // レスポンシブ対応
 @media screen and (max-width: 767px) {
   header {
@@ -406,7 +396,7 @@ input,textarea {
 }
 
 
-
+}
 
 // @import "../../fujioka";
 
