--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,5 @@
-
+@charset "UTF-8";
 nav {
-
-}
-
-header {
-
   display: flex;
   justify-content: flex-end;
 }
@@ -13,21 +8,25 @@ header {
   display: flex;
   justify-content: end;
 }
+
 .header-right li {
   margin: 5px 20px 0 0;
   letter-spacing: 1px;
   padding: 8px;
   font-size: 28px;
 }
+
 .header-right a {
   text-decoration: none;
   color: black;
 }
 
 .kv-pc {
-  width: 100%;
-  height: auto;
-  background-size: cover;
+  position: absolute;
+  padding: 20px;
+  left: 100px;
+  top: 80px;
+  width: 1170px;
 }
 
 .container {
@@ -36,17 +35,14 @@ header {
 }
 
 .kv-img1 {
-  position: absolute;
-  width: 460px;
-  height: 220px;
   top: 95px;
   left: 40px;
   bottom: 10px;
   background-image: url(../../img/kv_03_pc.jpg);
+  background-size: contain;
 }
 
 .kv-img2 {
-  position: absolute;
   width: 460px;
   height: 638px;
   left: 40px;
@@ -55,7 +51,6 @@ header {
 }
 
 .kv-img3 {
-  position: absolute;
   width: 420px;
   height: 638px;
   right: 40px;
@@ -65,7 +60,6 @@ header {
 }
 
 .kv-img4 {
-  position: absolute;
   width: 420px;
   height: 224px;
   right: 40px;
@@ -83,21 +77,12 @@ header {
 }
 
 .title-wrap {
-  position: relative;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  align-items: center;
   height: 100vh;
 }
-
-
-.title-wrap p {
-  font-size: 30px;
-  position: absolute;
-  top: 80px;
-  left: 570px;
-}
-
 
 .text-container {
   font-size: 50px;
@@ -108,126 +93,114 @@ header {
   height: 100vh;
 }
 
-
 .text-container1 {
-
-}
-
-.title-wrap2 p {
-  font-size: 30px;
-  position: absolute;
-  top: 100px;
-  left: 570px;
-}
-
-.title-wrap3 {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
-}
-
-.title-wrap3 p {
-
+  font-size: 25px;
   text-align: center;
 }
 
-.container-wrap {
-  display: flex;
+.about-right {
+  display: block;
   max-width: 1170px;
-  text-align: center;
-  letter-spacing: 1px;
 }
 
-#About .container {
+.about {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 80px;
+}
+
+.about h1 {
+  text-align: center;
+  font-size: 48px;
+}
+
+.about {
   display: flex;
   align-items: center;
   flex-direction: row-reverse;
   margin-top: 80px;
 }
 
-.about-description {
+.about-left {
+  display: flex;
+  align-items: center;
+}
+
+.about-left .about-description {
   margin-left: 10px;
 }
 
-#About .description {
+.about-left .about.description {
   margin-left: auto;
   margin-right: 100px;
 }
 
-.card-skin {
+.about-left .picture {
   position: relative;
   box-shadow: 15px 15px 0 #F9C83B;
 }
 
-.card-skin2 {
+.about-left .card-skin2 {
   position: relative;
   box-shadow: -15px 15px 0 #FFF835;
 }
 
-.container2 {
+.about-left .container2 {
   padding: 100px 0px 0px;
   margin: 0px 70px;
   text-align: center;
 }
 
-.container-wrap2 {
+.about-left .servise {
   max-width: 1170px;
   padding: 50px 0px;
   margin-left: 50px;
   margin-top: 40px;
 }
 
-h1 {
+.about-left h1 {
   font-size: 42px;
   font-weight: 900;
   text-align: center;
 }
 
-h2 {
+.about-left h2 {
   font-size: 10px;
 }
 
-p {
+.about-left p {
   margin-top: 5px;
 }
 
-.about-right {
+.about-left .about-right {
   display: flex;
 }
 
-.plan {
+.about-left .plan {
   display: flex;
   justify-content: space-around;
   margin-top: 70px;
 }
 
-.box {
+.about-left .box {
   width: 400px;
   height: 600px;
   border: solid 1px black;
 }
 
-.description {
+.about-left .description {
   text-align: center;
   line-height: 1;
   margin: 0px 10px;
   padding-top: 10px;
 }
 
-.card-skin3 {
+.about-left .card-skin3 {
   position: relative;
   box-shadow: 15px 15px 0px 0 #9067E9;
 }
 
-
-form textarea {
-  border-radius: 5px;
-  margin: 20px auto;
-  border: solid 2px #0c0c0c;
-  margin: 20px auto;
-
+.about-left input, .about-left textarea {
   display: block;
   width: 400px;
   padding: 8px;
@@ -236,8 +209,7 @@ form textarea {
   margin-bottom: 8px;
 }
 
-
-.form-btn {
+.about-left .form-btn {
   background-color: black;
   color: white;
   width: 400px;
@@ -250,33 +222,22 @@ form textarea {
   font-size: 20px;
 }
 
-.box1 {
-  font-size: 20px;
-  color: #2e2d2d;
-  width: 400px;
-  height: 40px;
-  border-radius: 3px;
-  border: solid 2px #0c0c0c;
-  margin: 20px auto;
-  padding-left: 10px;
-
-}
-
-.contact-wrap {
+.about-left .contact {
   padding: 100px;
 }
-.contact-wrap .container {
+
+.about-left .contact .container {
   display: block;
 }
 
-.wrap {
+.about-left .wrap {
   display: flex;
   text-align: center;
   color: #fff;
   font-weight: bold;
 }
 
-.wrap .box-a {
+.about-left .wrap .box-a {
   flex-grow: 1;
   position: relative;
   height: 140px;
@@ -285,7 +246,7 @@ form textarea {
   background-color: #aeb2ba;
 }
 
-.wrap .box-a::after {
+.about-left .wrap .box-a::after {
   position: absolute;
   top: 0;
   left: 100%;
@@ -293,18 +254,18 @@ form textarea {
   content: "";
   width: 1px;
   height: 100%;
-  background-color: #333;
+  background-color: black;
 }
 
-.wrap .box-b {
+.about-left .wrap .box-b {
   flex-grow: 1;
   height: 140px;
   line-height: 140px;
-  background-color: #495464;
+  background-color: #030303;
 }
 
 @media screen and (max-width: 767px) {
-  header {
+  .about-left header {
     position: fixed;
     width: 100%;
     overflow: hidden;
@@ -312,7 +273,7 @@ form textarea {
   }
 }
 
-.form-btn {
+.about-left .form-btn {
   margin-top: 24px;
   padding-top: 8px;
   padding-bottom: 8px;
@@ -320,6 +281,9 @@ form textarea {
   font-size: 16px;
 }
 
+* {
+  border: solid gold 1px;
+}
 
 section {
   opacity: 0;
@@ -338,13 +302,16 @@ section {
 .pet-livers {
   margin: 0 auto;
 }
+
 .pet-livers h1 {
   font-size: 50px;
   text-align: center;
 }
+
 .pet-livers .container-livers {
   background-color: gray;
 }
+
 .pet-livers .container-livers .box-livers1 {
   display: flex;
   justify-content: space-around;
@@ -352,6 +319,7 @@ section {
   padding-left: 10.6%;
   padding-right: 10.8%;
 }
+
 .pet-livers .container-livers .box-livers2 {
   margin-top: 21.93px;
   display: flex;
@@ -360,6 +328,7 @@ section {
   padding-right: 10.8%;
   padding-bottom: 94.2px;
 }
+
 .pet-livers .container-livers .livers {
   width: 24.1%;
   border: solid pink 1px;
@@ -374,10 +343,6 @@ section {
   font-size: 50px;
 }
 
-.sponser #animal-rights {
-  justify-items: center;
-}
-
 .sponser .sponser1 {
   margin: 0 auto;
   padding-left: 19.8%;
@@ -389,55 +354,61 @@ section {
   margin: 0 auto;
 }
 
-.sponser .sponser2 {
-  padding-left: 49.2%;
-  padding-right: 45.3%;
-}
-
 .sponser .sponser2 #animal-foundation {
   width: 300px;
   margin: 0 auto;
-
 }
+
 .sponser h5 {
   font-size: 26px;
   text-align: center;
-
-}/*# sourceMappingURL=style.css.map */
-
-
+}
 
 .customer-voice {
   margin: 0 auto;
   width: 1170px;
 }
 
+.customer-voice h1 {
+  font-size: 40px;
+  text-align: center;
+}
+
 .customer-voice .container-customer-voice {
   display: flex;
 }
 
-.customer-voice .container-customer-voice .voice-left img {
+.container-customer-voice {
+  display: flex;
+}
+
+.container-customer-voice .voice-left img {
   width: 400px;
   box-shadow: -15px 15px 0 #E7AFC3;
 }
 
-.customer-voice .container-customer-voice .voice-right {
+.container-customer-voice .voice-right {
   width: 600px;
   margin-top: 130px;
   margin-left: 135px;
 }
 
-.customer-voice .container-customer-voice .voice-right h3 {
+.container-customer-voice .voice-right h3 {
   font-size: 20px;
 }
 
-.customer-voice .container-customer-voice .voice-right p {
+.container-customer-voice .voice-right p {
   width: 350px;
 }
 
 .company {
   width: 1170px;
   margin: 0 auto;
+}
+
+.company h1 {
+  font-size: 40px;
+  text-align: center;
 }
 
 .company .container-company {
@@ -471,4 +442,3 @@ section {
   }
 }
 /*# sourceMappingURL=style.css.map */
-
