--- a/assets/scss/_fujioka.scss
+++ b/assets/scss/_fujioka.scss
@@ -256,9 +256,9 @@
 
 
 // ----自分で作成
-// *{
-//   border: solid gold 1px;
-// }
+*{
+  border: solid gold 1px;
+}
 
 // アニメーション
 section{
@@ -345,9 +345,9 @@ section{
   // // margin: 0 auto;
   // // padding-top: 83px;
   // // 739/1501
-  padding-left: 49.2%;
+  // padding-left: 49.2%;
   // // 681/1501
-  padding-right: 45.3%;
+  // padding-right: 45.3%;
   // margin-top: 83px;
 
  #animal-foundation{
@@ -377,6 +377,18 @@ section{
 .customer-voice{
   margin: 0 auto;
   width: 1170px;
+
+h1{
+  font-size: 40px;
+  text-align: center;
+}
+
+.container-customer-voice{
+  display: flex;
+}
+}
+
+
 
 .container-customer-voice{
   display: flex;
@@ -410,18 +422,21 @@ p{
 width: 350px;
 }
 }
-
-
-}
+// customer-voice
 }
 
 // company
 .company{
   width:1170px;
   margin: 0 auto;
+  h1{
+    font-size: 40px;
+    text-align: center;
+  }
 
  .container-company{
    display: flex;
+
 
    h2{
    font-size: 36px;
