--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -157,12 +157,14 @@ nav {
 
 // ----- About -----
 
-
 .about-right {
+  display: flex;
+  padding: 10px;
+  flex-direction: row-reverse;
   display: block;
-  max-width: 1170px;
- 
+  // max-width: 1170px;
 }
+
 
 .about{
   display: flex;
@@ -172,13 +174,8 @@ nav {
 h1{
   text-align: center;
   font-size: 48px;
-    }
-    
+  }
 }
-
-
-
-
 
 
 .about {
@@ -188,17 +185,14 @@ h1{
   margin-top: 80px;
 }
 .about-left {
- 
   display: flex;
   align-items: center;
-  
+}
 
   .about-description {
     margin-left: 10px;
   }
   
-
-
 
 .about.description {
   margin-left: auto;
@@ -223,7 +217,7 @@ h1{
   
 }
 
-.card-skin2 {
+.picture {
   position: relative;
   box-shadow: -15px 15px 0 #FFF835;
 }
@@ -305,8 +299,6 @@ input,textarea {
   border: 1px solid black; 
   margin-top: 8px; 
   margin-bottom: 8px;
-
- 
 }
 
 .form-btn {
@@ -320,7 +312,6 @@ input,textarea {
   cursor: pointer;
   text-align: center;
   font-size: 20px;
-  
  
 }
 
@@ -401,8 +392,6 @@ input,textarea {
   width: 160px;
   font-size: 16px;
 }
-
-
 
 
 // @import "../../fujioka";
