--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,10 +284,6 @@ nav {
   font-size: 16px;
 }
 
-* {
-  border: solid gold 1px;
-}
-
 section {
   opacity: 0;
   visibility: hidden;
@@ -507,12 +503,71 @@ section {
 }
 
 @media screen and (max-width: 767px) {
+  .pet-livers {
+    width: 1100px;
+  }
+  .pet-livers h1 {
+    font-size: 40px;
+    text-align: center;
+  }
+  .pet-livers .container-livers {
+    height: 8835px;
+  }
+  .pet-livers .box-livers1 {
+    display: block;
+  }
+  .pet-livers .box-livers2 {
+    display: block;
+  }
+  .sponser {
+    width: 1100px;
+  }
+  .sponser h1 {
+    font-size: 40px;
+    text-align: center;
+  }
   .sponser #animal-rights {
     padding-left: 15.9%;
     padding-right: 14.7%;
   }
+  .sponser #animal-foundation {
+    margin: 0 auto;
+  }
   .sponser h5 {
     display: none;
+  }
+  .customer-voice {
+    width: 1100px;
+  }
+  .customer-voice h1 {
+    font-size: 40px;
+    text-align: center;
+  }
+  .customer-voice .deco-voice {
+    display: none;
+  }
+  .customer-voice .container-customer-voice {
+    display: block;
+    margin: 0 auto;
+  }
+  .company {
+    width: 1100px;
+  }
+  .company h1 {
+    font-size: 40px;
+    text-align: center;
+  }
+  .company .container-company {
+    display: block;
+    margin: 0 auto;
+  }
+  .company .company-left {
+    padding-left: 0px;
+    margin: 0 auto;
+  }
+  .company .company-right {
+    padding-top: 40px;
+    margin: 0 auto;
   }
 }
 /*# sourceMappingURL=style.css.map */
