--- a/scss/style.scss
+++ b/scss/style.scss
@@ -549,15 +549,10 @@
 }
 
 /* ----- Service----- */
-
 #Service {
-  .container {
-    max-width: 1170px;
-  }
-
   font-size: 58px;
   font-weight: 900;
-  text-align: center;
+  
 }
 
 h2 {
@@ -572,24 +567,76 @@ p {
   text-align: left;
 }
 
-img {
-  width: 32%;
-  margin: 38px 30px;
+img{
+  width: 23%;
+  margin: 20px 0px 0px 20px;
 }
 
-.box-a {
-  margin: 100px;
+.box-a{
+  
+  margin: 30px;
   border: solid 2px #9067E9;
   box-shadow: 13px 13px 0px 0 #9067E9;
-  width: 24%;
+  width: 48%;
 }
 
-.box-b, .box-c {
-  margin: 100px;
+.box-b{
+  margin: 30px;
   box-shadow: 13px 13px 0px 0 #9067E9;
   border: solid 2px #9067E9;
-  width: 24%;
+  width: 48%;
 }
+
+.box-c{
+  margin: 30px;
+  box-shadow: 13px 13px 0px 0 #9067E9;
+  border: solid 2px #9067E9;
+  width: 48%;
+}
+
+
+
+
+// #Service {
+//   .container {
+//     max-width: 1170px;
+//   }
+
+//   font-size: 58px;
+//   font-weight: 900;
+//   text-align: center;
+// }
+
+// h2 {
+//   font-size: 20px;
+//   text-align: center;
+// }
+
+// p {
+//   font-size: 15px;
+//   margin: 0px 0px 10px 20px;
+//   padding: 5px  10px;
+//   text-align: left;
+// }
+
+// img {
+//   width: 32%;
+//   margin: 38px 30px;
+// }
+
+// .box-a {
+//   margin: 100px;
+//   border: solid 2px #9067E9;
+//   box-shadow: 13px 13px 0px 0 #9067E9;
+//   width: 24%;
+// }
+
+// .box-b, .box-c {
+//   margin: 100px;
+//   box-shadow: 13px 13px 0px 0 #9067E9;
+//   border: solid 2px #9067E9;
+//   width: 24%;
+// }
 
 /* -----contact----- */
 
